garden: fixed truncation error

--- a/garden-src/quartz/styles/custom.scss
+++ b/garden-src/quartz/styles/custom.scss
@@ -1250,9 +1250,3 @@ body.garden-right-collapsed #quartz-body > .right.sidebar { display: none !impor
     padding: 0 0 4rem 0 !important;
   }
 }
-y: none !important; }
-  #quartz-body > .center {
-    max-width: 100% !important;
-    padding: 0 0 4rem 0 !important;
-  }
-}
